2005-11-09  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 
	* NEWS: 0.9

	* NEWS: 
	* Makefile.am (EXTRA_DIST): 
	* tests/asm.sh: 
	* tests/asm-x86_64.S (main): add test for amd64

2005-08-30  Junichi Uekawa  <dancer@debian.org>

	* debian/control (Suggests): libgcj4-dev -> libgcj6-dev

	* NEWS: 0.8 release.

	* configure.ac: 0.8

2005-08-04  Junichi Uekawa  <dancer@debian.org>

	* Makefile.am (dist_man_MANS): rename realcsh.1 -> realcsh.c.1

	* realcsh.c.1: rename

	* configure.ac: update.

	* NEWS: update news.

	* binfmtc-interpreter.c: fix up const/non-const issues, and free some variables.

2005-07-29  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.7

	* README: update

	* Makefile.am (EXTRA_DIST): reflect renames

	* binfmtc-unreg.sh: rename from unreg.sh, and update to current functionality.
	* binfmtc-init.sh: rename from init.sh

2005-07-15  Junichi Uekawa  <dancer@debian.org>

	* realcsh.1: document.

	* realcsh.c (defs_list): Add implementation for adding include files
	on the fly.

2005-06-19  Junichi Uekawa  <dancer@debian.org>

	* NEWS: update
	* configure.ac: 0.6
	* Makefile.am:
	* tests/asm.sh: 
	* tests/asm-x86.S: add x86 implementation.

2005-06-04  Junichi Uekawa  <dancer@debian.org>

	* configure.ac: 0.5
	* NEWS: 0.5
	* binfmtc-interpreter.c: include sys/wait.h
	* debian/pcompile.binfmts: 
	* debian/binfmtc.postrm: 
	* debian/binfmtc.postinst: 
	* debian/rules (install): 
	* binfmtp-interpreter.1: 
	* binfmtc-lang-p.c (default_options): Add
	* Makefile.am (EXTRA_DIST): pascal
	(TESTS): pascal
	(bin_PROGRAMS, binfmtp_interpreter_SOURCES, dist_man_MANS): 
	* tests/pascal.sh: 
	* tests/pascal.pas: implement pascal binding.

	* debian/binfmtc.postinst: add fcompile
	* debian/binfmtc.postrm: add fcompile
	* debian/fcompile.binfmts: create
	* debian/rules (install): add fcompile.
	* Makefile.am (dist_man_MANS): add
	* binfmtf-interpreter.1: create
	* binfmtc-lang-f.c: add fortran
	* Makefile.am (TESTS, EXTRA_DIST): add fortran