@@ -1,3 +1,8 @@
+2005-11-18  Junichi Uekawa  <dancer@debian.org>
+
+	* tests/asm-ppc.S: use a shorter version of test file for ppc 
+	assembly.
+
 2005-11-09  Junichi Uekawa  <dancer@debian.org>
 
 	* configure.ac: 
